# janet-shiori

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  cmd.txt  config.janet  cshiolink.c  cshiori.c  cshiori.h  hardwarebp.c  hardwarebp.h  init.gen.c  init.janet  janet-shiori.el  shiolink.c  shiori.c  shiori.janet  shiori_events.c  strutl.c  test.txt  test2.txt
ghost/: install.txt  readme.txt
ghost/ghost/master/: cmd.txt  descript.txt
ghost/shell/master/: descript.txt  surfaces.txt
lib/: init.janet  sakura.janet
modules/: lib.janet  sakura.janet  shiori.janet
